@@ -49,9 +49,6 @@
     <Reference Include="Mono.Posix">
       <HintPath>..\lib\Mono.Posix.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>..\..\lib\nunit.framework.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\DirectoryIterator.cs" />
@@ -59,9 +56,7 @@
     <Compile Include="CPTreeTool.cs" />
     <Compile Include="Core\PlatformHacks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\DirectoryIteratorFixture.cs" />
     <Compile Include="Properties\ThisAssembly.cs" />
-    <Compile Include="Tests\PathUtilityFixture.cs" />
     <Compile Include="CommandLine\CommandLine.cs" />
     <Compile Include="CommandLine\CommandLineText.cs" />
   </ItemGroup>
