@@ -114,10 +114,10 @@ namespace CopyDirectoryTree
         #endregion
 
         [DllImport("libc")] // Linux
-        private static extern int prctl(int option, byte[] arg2, IntPtr arg3, IntPtr arg4, IntPtr arg5);
+        static extern int prctl(int option, byte[] arg2, IntPtr arg3, IntPtr arg4, IntPtr arg5);
 
         [DllImport("libc")] // BSD
-        private static extern void setproctitle(byte[] fmt, byte[] str_arg);
+        static extern void setproctitle(byte[] fmt, byte[] str_arg);
 
         public static void SetProcessName(string name)
         {
